# gargouille

./: .gitignore  Cargo.toml  README.md
config/: default.toml
waf-cli/: Cargo.toml
waf-cli/src/: main.rs
waf-cli/src/middleware/: chain.rs  mod.rs
waf-core/: Cargo.toml
waf-core/src/: allowlist_schema.rs  allowlist_service.rs  config.rs  database.rs  engine.rs  lib.rs  metrics.rs  parser.rs  rate_limit.rs  scoring.rs  waf.rs
waf-core/src/admin_auth/: schema.rs  service.rs  types.rs
waf-core/src/rules/: bot_detection.rs  cmdi.rs  deserialization.rs  header_injection.rs  lfi_rfi.rs  mod.rs  path_traversal.rs  sql_injection.rs  ssrf.rs  ssti.rs  xss.rs
waf-core/tests/: admin_auth_tests.rs  allowlist_tests.rs  integration_tests.rs
