[workspace]
members = ["waf-core", "waf-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1.45", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

regex = "1.12"
ahash = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Security & crypto
ring = "0.17"
rustls = "0.23"
rustls-pemfile = "2.2"

# Metrics
prometheus-client = "0.24"

# Serialization for rule storage
serde_yaml = "0.9"

# Blocking IP lookup (GeoIP)
maxminddb = "0.28"

# CLI
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# Config validation
schemars = "0.9"

uuid = { version = "1.15", features = ["v4", "serde"] }

# HTTP client (CLI operations)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# TLS cert generation
rcgen = "0.14"
tokio-rustls = { version = "0.26", default-features = false }
http = "1"
