[package]
name = "waf-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Gargouille WAF CLI — Management & reverse proxy server"

[[bin]]
name = "gargouille"
path = "src/main.rs"

[dependencies]
waf-core = { path = "../waf-core" }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["query", "form", "macros", "http1", "http2"] }
hyper = { workspace = true, features = ["full"] }
http-body-util = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["trace", "cors", "compression-full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true, features = ["derive"] }
schemars = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
ahash = { workspace = true }
http = "1"

# TLS support (self-signed cert generation + server)
rcgen = "0.12"
rustls-pemfile = "2.0"
tokio-rustls = { version = "0.25", default-features = false }
rustls = { workspace = true, optional = true }

# API client for CLI operations
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[features]
default = []
tls = ["dep:rustls"]
